--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 <body>
   <header>
     <h1>🛍️ Product Listing Page</h1>
+    <!-- add near your header title -->
+    <button class="cart-btn">
+        <i class="fa fa-shopping-cart"></i>
+        cart: <span id="cartCount">0</span>
+    </button>
+
+
     <div class="filters">
       <input type="text" id="search" placeholder="Search products...">
       <select id="category">
